# nightowlcli

./: .gitignore  LICENSE  README.md  install.bat  install.sh  pyproject.toml  setup.py
nightowlcli/: __init__.py  __main__.py  errors.py  funky.py
test/: test_funky.py
