[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nightowlcli"
version = "0.1.0"
description = "Command-line interface project skeleton using best practices"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Shawn Oster", email = "shawn.oster@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["typer>=0.12.0"]

[project.urls]
Homepage = "https://github.com/shawnoster/nightowlcli"

[project.scripts]
nightowlcli = "nightowlcli.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.4.0"]

# ---------------------------------------------------------------------------
# Ruff – linter + formatter (replaces flake8, black, isort)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (type hints)
]
ignore = []

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["nightowlcli"]
omit = ["test/*"]
